Error pages translated

--- a/public/404.html
+++ b/public/404.html
@@ -54,5 +54,6 @@
     <h1>Страница, которую вы ищите не найдена.</h1>
     <p>Вы могли ошибиться или адрес страницы изменился.</p>
   </div>
+  <p>&nbsp</p>
 </body>
 </html>
