--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>Ваше изменения отклонены (422)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,9 +50,9 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>Ваши изменения отклонены.</h1>
+    <p>Возможно вы попытались изменить то к чему вы не имеете доступ.</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>&nbsp</p>
 </body>
 </html>
