--- a/public/500.html
+++ b/public/500.html
@@ -51,7 +51,7 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>Мы сожалеем но что-то пошло не так.</h1>
+    <h1>Мы сожалеем, но что-то пошло не так.</h1>
   </div>
   <p>&nbsp</p>
 </body>
